--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
