--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
-[build]
-  command = "npm run build" # Projeyi derlemek için kullanılacak komut
-  publish = "dist" # Derleme sonucunda ortaya çıkacak dosyaların bulunduğu dizin
+[[redirects]]
+from ="/*"
+to ="/index.html"
+status = 200
